--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=localhost,1433;Database=FormBuilderDB;User Id=sa;Password=09Naveen;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
+
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://admin:09Naveen@localhost:27017/FormBuilderDB?authSource=admin",
+    "DatabaseName": "FormBuilderDB"
+  },
+
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyThatShouldBeAtLeast32CharactersLong!",
+    "Issuer": "FormBuilder",
+    "Audience": "FormBuilderUsers"
+  }
 }
