Completed design and APIs

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -23,6 +23,7 @@
         </PackageReference>
         <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
     </ItemGroup>
 
